@@ -6,20 +6,21 @@
 # the changes to take affect.
 IPV6=no
 
-# set the default input policy to ACCEPT or DROP.  Please note that if you
-# change this you will most likely want to adjust your rules
+# set the default input policy to ACCEPT, DROP or REJECT.  Please note that if
+# you change this you will most likely want to adjust your rules
 DEFAULT_INPUT_POLICY="DROP"
 
-# set the default output policy to ACCEPT or DROP.  Please note that if you
-# change this you will most likely want to adjust your rules
+# set the default output policy to ACCEPT, DROP, or REJECT.  Please note that
+# if you change this you will most likely want to adjust your rules
 DEFAULT_OUTPUT_POLICY="ACCEPT"
 
-# set the default forward policy to ACCEPT or DROP.  Please note that if you
-# change this you will most likely want to adjust your rules
+# set the default forward policy to ACCEPT, DROP or REJECT.  Please note that
+# if you change this you will most likely want to adjust your rules
 DEFAULT_FORWARD_POLICY="DROP"
 
-# set the default application policy to ACCEPT, DROP or SKIP. Please note that
-# setting this to ACCEPT may be a security risk. See 'man ufw' for details
+# set the default application policy to ACCEPT, DROP, REJECT or SKIP. Please
+# note that setting this to ACCEPT may be a security risk. See 'man ufw' for
+# details
 DEFAULT_APPLICATION_POLICY="SKIP"
 
 #
