@@ -11,15 +11,15 @@ use interface for the user.
 .TP
 ufw [\fB\-\-dry\-run\fR] \fBenable|disable|reload\fR
 .TP
-ufw [\fB\-\-dry\-run\fR] \fBdefault\fR allow|deny
+ufw [\fB\-\-dry\-run\fR] \fBdefault\fR allow|deny|reject
 .TP
 ufw [\fB\-\-dry\-run\fR] \fBlogging\fR on|off
 .TP
 ufw [\fB\-\-dry\-run\fR] \fBstatus\fR [verbose|raw]
 .TP
-ufw [\fB\-\-dry\-run\fR] [\fBdelete\fR] \fBallow|deny|limit\fR PORT[/protocol]
+ufw [\fB\-\-dry\-run\fR] [\fBdelete\fR] \fBallow|deny|reject|limit\fR PORT[/protocol]
 .TP
-ufw [\fB\-\-dry\-run\fR] [\fBdelete\fR] \fBallow|deny|limit\fR [\fBproto\fR protocol] [\fBfrom\fR ADDRESS [\fBport\fR PORT]] [\fBto\fR ADDRESS [\fBport\fR PORT]]
+ufw [\fB\-\-dry\-run\fR] [\fBdelete\fR] \fBallow|deny|reject|limit\fR [\fBproto\fR protocol] [\fBfrom\fR ADDRESS [\fBport\fR PORT]] [\fBto\fR ADDRESS [\fBport\fR PORT]]
 .TP
 ufw [\fB\-\-dry\-run\fR] \fBapp\fR \fBlist|info|default|update\fR
 
@@ -43,9 +43,10 @@ unloads firewall and disables firewall on boot
 \fBreload\fR
 reloads firewall
 .TP
-\fBdefault\fR allow|deny
+\fBdefault\fR allow|deny|reject
 change the default policy for incoming traffic. Note that existing rules will
-have to be migrated manually when changing the default policy.
+have to be migrated manually when changing the default policy. See
+\fBRULE SYNTAX\fR for more on \fBdeny\fR and \fBreject\fR.
 .TP
 \fBlogging\fR on|off
 toggle logging. Logged packets use the LOG_KERN syslog facility.
@@ -61,10 +62,13 @@ allow RULE.  See \fBRULE SYNTAX\fR
 \fBdeny\fR RULE
 deny RULE.  See \fBRULE SYNTAX\fR
 .TP
+\fBreject\fR RULE
+reject RULE.  See \fBRULE SYNTAX\fR
+.TP
 \fBlimit\fR RULE
 limit RULE.  Currently only IPv4 is supported.  See \fBRULE SYNTAX\fR
 .TP
-\fBdelete\fR allow|deny|limit RULE
+\fBdelete\fR allow|deny|reject|limit RULE
 deletes the corresponding allow/deny/limit RULE
 
 .SH "RULE SYNTAX"
@@ -119,6 +123,13 @@ See http://www.debian-administration.org/articles/187 for details.  Typical
 usage is:
 
   ufw limit ssh/tcp
+
+.PP
+Sometimes it is desirable to let the sender know when traffic is being
+denied, rather than simply ignoring it. In these cases, use \fBreject\fR
+instead of \fBdeny\fR.  For example:
+
+  ufw reject auth
 
 .PP
 To delete a rule, simply prefix the original rule with \fBdelete\fR. For
