@@ -32,26 +32,38 @@ Default policy changed to 'deny'
 (be sure to update your rules accordingly)
 
 
-6: --dry-run DEFAULT ALLOW
+6: --dry-run default reject
+WARN: Checks disabled
+Default policy changed to 'reject'
+(be sure to update your rules accordingly)
+
+
+7: --dry-run DEFAULT ALLOW
 WARN: Checks disabled
 Default policy changed to 'allow'
 (be sure to update your rules accordingly)
 
 
-7: --dry-run DEFAULT DENY
+8: --dry-run DEFAULT DENY
 WARN: Checks disabled
 Default policy changed to 'deny'
 (be sure to update your rules accordingly)
 
 
+9: --dry-run DEFAULT REJECT
+WARN: Checks disabled
+Default policy changed to 'reject'
+(be sure to update your rules accordingly)
+
+
 TESTING ARGS (enable/disable)
-8: --dry-run enable
+10: --dry-run enable
 WARN: Checks disabled
 > running initscript
 Firewall started and enabled on system startup
 
 
-9: --dry-run disable
+11: --dry-run disable
 WARN: Checks disabled
 > iptables -F
 > iptables -X
@@ -65,13 +77,13 @@ COMMIT
 Firewall stopped and disabled on system startup
 
 
-10: --dry-run ENABLE
+12: --dry-run ENABLE
 WARN: Checks disabled
 > running initscript
 Firewall started and enabled on system startup
 
 
-11: --dry-run DISABLE
+13: --dry-run DISABLE
 WARN: Checks disabled
 > iptables -F
 > iptables -X
@@ -86,19 +98,19 @@ Firewall stopped and disabled on system startup
 
 
 TESTING ARGS (status)
-12: --dry-run status
+14: --dry-run status
 WARN: Checks disabled
 > Checking iptables
 
 
 
-13: --dry-run status verbose
+15: --dry-run status verbose
 WARN: Checks disabled
 > Checking iptables
 
 
 
-14: --dry-run status raw
+16: --dry-run status raw
 WARN: Checks disabled
 > Checking raw iptables
 > Checking raw ip6tables
