@@ -25,8 +25,10 @@ do_cmd "0" --dry-run LOGGING OFF
 echo "TESTING ARGS (default)" >> $TESTTMP/result
 do_cmd "0" --dry-run default allow
 do_cmd "0" --dry-run default deny
+do_cmd "0" --dry-run default reject
 do_cmd "0" --dry-run DEFAULT ALLOW
 do_cmd "0" --dry-run DEFAULT DENY
+do_cmd "0" --dry-run DEFAULT REJECT
 
 echo "TESTING ARGS (enable/disable)" >> $TESTTMP/result || exit 1
 do_cmd "0" --dry-run enable 
